--- a/pom.xml
+++ b/pom.xml
@@ -1,124 +1,138 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.foreach.libs</groupId>
-	<artifactId>common-projects</artifactId>
-	<version>0.8-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<modules>
-		<module>common-spring</module>
-		<module>common-hibernate</module>
-		<module>common-mybatis</module>
-		<module>common-web</module>
-		<module>common-test</module>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.foreach.libs</groupId>
+    <artifactId>common-projects</artifactId>
+    <version>0.8-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>common-spring</module>
+        <module>common-hibernate</module>
+        <module>common-mybatis</module>
+        <module>common-web</module>
+        <module>common-test</module>
         <module>common-synchronizer</module>
     </modules>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>aggregate</id>
-						<goals>
-							<goal>aggregate</goal>
-						</goals>
-						<phase>package</phase>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.1.2</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.7</version>
-				<inherited>false</inherited>
-				<executions>
-					<execution>
-						<phase>deploy</phase>
-						<configuration>
-							<target>
-								<property name="deploy.site.location" value="foreach@192.168.2.91:/var/www2/java.libs.foreach.com/sites/common-projects/" />
-								<loadproperties srcfile="${user.home}/.foreach/foreach-buildserver.properties" />
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.8</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>aggregate</id>
+                        <goals>
+                            <goal>aggregate</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.1.2</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
+                <inherited>false</inherited>
+                <executions>
+                    <execution>
+                        <phase>deploy</phase>
+                        <configuration>
+                            <target>
+                                <property name="deploy.site.location"
+                                          value="foreach@192.168.2.91:/var/www2/java.libs.foreach.com/sites/common-projects/"/>
+                                <loadproperties srcfile="${user.home}/.foreach/foreach-buildserver.properties"/>
 
-								<delete dir="target/javadoc-deploy/${project.version}" failonerror="false" />
+                                <delete dir="target/javadoc-deploy/${project.version}" failonerror="false"/>
 
-								<copy todir="target/javadoc-deploy/${project.version}">
-									<fileset dir="target/site/apidocs" />
-								</copy>
+                                <copy todir="target/javadoc-deploy/${project.version}">
+                                    <fileset dir="target/site/apidocs"/>
+                                </copy>
 
-								<scp todir="${deploy.site.location}" keyfile="${keyfile}" passphrase="${passphrase}" trust="yes">
-									<fileset dir="target/javadoc-deploy">
-										<include name="**/*" />
-									</fileset>
-								</scp>
-							</target>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>com.jcraft</groupId>
-						<artifactId>jsch</artifactId>
-						<version>0.1.50</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.ant</groupId>
-						<artifactId>ant-jsch</artifactId>
-						<version>1.8.1</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-		</plugins>
-	</build>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<springVersion>3.1.1.RELEASE</springVersion>
-	</properties>
-	<distributionManagement>
-		<repository>
-			<id>foreach-nexus</id>
-			<name>Foreach nexus</name>
-			<url>http://java.libs.foreach.com/nexus/content/repositories/releases</url>
-		</repository>
-		<snapshotRepository>
-			<id>foreach-nexus</id>
-			<name>Foreach nexus</name>
-			<url>http://java.libs.foreach.com/nexus/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
-	<scm>
-		<connection>scm:git:http://stash.foreach.be/scm/fe/java-common-libraries.git</connection>
-		<developerConnection>scm:git:http://stash.foreach.be/scm/fe/java-common-libraries.git</developerConnection>
-	</scm>
+                                <scp todir="${deploy.site.location}" keyfile="${keyfile}" passphrase="${passphrase}"
+                                     trust="yes">
+                                    <fileset dir="target/javadoc-deploy">
+                                        <include name="**/*"/>
+                                    </fileset>
+                                </scp>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.jcraft</groupId>
+                        <artifactId>jsch</artifactId>
+                        <version>0.1.50</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.ant</groupId>
+                        <artifactId>ant-jsch</artifactId>
+                        <version>1.8.1</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <springVersion>3.1.1.RELEASE</springVersion>
+    </properties>
+    <distributionManagement>
+        <repository>
+            <id>foreach-nexus</id>
+            <name>Foreach nexus</name>
+            <url>http://java.libs.foreach.com/nexus/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>foreach-nexus</id>
+            <name>Foreach nexus</name>
+            <url>http://java.libs.foreach.com/nexus/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+    <scm>
+        <connection>scm:git:http://stash.foreach.be/scm/fe/java-common-libraries.git</connection>
+        <developerConnection>scm:git:http://stash.foreach.be/scm/fe/java-common-libraries.git</developerConnection>
+    </scm>
+    <profiles>
+        <profile>
+            <id>sonar</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <sonar.branch>${project.version}</sonar.branch>
+            </properties>
+        </profile>
+    </profiles>
 </project>
