--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
 						<configuration>
 							<target>
 								<property name="deploy.site.location"
-								          value="foreach@192.168.2.91:/var/www2/java.libs.foreach.com/sites/common-projects/"/>
+								          value="buildserver@192.168.2.42:/var/www/repository.foreach.be/sites/common-projects/"/>
 								<loadproperties srcfile="${user.home}/.foreach/foreach-buildserver.properties"/>
 
 								<delete dir="target/javadoc-deploy/${project.version}" failonerror="false"/>
@@ -186,12 +186,12 @@
 		<repository>
 			<id>foreach-nexus</id>
 			<name>Foreach nexus</name>
-			<url>http://java.libs.foreach.com/nexus/content/repositories/releases</url>
+			<url>http://repository.foreach.be/nexus/content/repositories/releases</url>
 		</repository>
 		<snapshotRepository>
 			<id>foreach-nexus</id>
 			<name>Foreach nexus</name>
-			<url>http://java.libs.foreach.com/nexus/content/repositories/snapshots</url>
+			<url>http://repository.foreach.be/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 	<scm>
