--- a/pom.xml
+++ b/pom.xml
@@ -57,49 +57,49 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.7</version>
-				<inherited>false</inherited>
-				<executions>
-					<execution>
-						<phase>deploy</phase>
-						<configuration>
-							<target>
-								<property name="deploy.site.location" value="buildserver@192.168.2.42:/var/www/repository.foreach.be/sites/common-projects/" />
-								<loadproperties srcfile="${user.home}/.foreach/foreach-buildserver.properties" />
+			<!--<plugin>-->
+			<!--<artifactId>maven-antrun-plugin</artifactId>-->
+			<!--<version>1.7</version>-->
+			<!--<inherited>false</inherited>-->
+			<!--<executions>-->
+			<!--<execution>-->
+			<!--<phase>deploy</phase>-->
+			<!--<configuration>-->
+			<!--<target>-->
+			<!--<property name="deploy.site.location" value="buildserver@192.168.2.42:/var/www/repository.foreach.be/sites/common-projects/" />-->
+			<!--<loadproperties srcfile="${user.home}/.foreach/foreach-buildserver.properties" />-->
 
-								<delete dir="target/javadoc-deploy/${project.version}" failonerror="false" />
+			<!--<delete dir="target/javadoc-deploy/${project.version}" failonerror="false" />-->
 
-								<copy todir="target/javadoc-deploy/${project.version}">
-									<fileset dir="target/site/apidocs" />
-								</copy>
+			<!--<copy todir="target/javadoc-deploy/${project.version}">-->
+			<!--<fileset dir="target/site/apidocs" />-->
+			<!--</copy>-->
 
-								<scp todir="${deploy.site.location}" keyfile="${keyfile}" passphrase="${passphrase}" trust="yes">
-									<fileset dir="target/javadoc-deploy">
-										<include name="**/*" />
-									</fileset>
-								</scp>
-							</target>
-						</configuration>
-						<goals>
-							<goal>run</goal>
-						</goals>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>com.jcraft</groupId>
-						<artifactId>jsch</artifactId>
-						<version>0.1.50</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.ant</groupId>
-						<artifactId>ant-jsch</artifactId>
-						<version>1.8.1</version>
-					</dependency>
-				</dependencies>
-			</plugin>
+			<!--<scp todir="${deploy.site.location}" keyfile="${keyfile}" passphrase="${passphrase}" trust="yes">-->
+			<!--<fileset dir="target/javadoc-deploy">-->
+			<!--<include name="**/*" />-->
+			<!--</fileset>-->
+			<!--</scp>-->
+			<!--</target>-->
+			<!--</configuration>-->
+			<!--<goals>-->
+			<!--<goal>run</goal>-->
+			<!--</goals>-->
+			<!--</execution>-->
+			<!--</executions>-->
+			<!--<dependencies>-->
+			<!--<dependency>-->
+			<!--<groupId>com.jcraft</groupId>-->
+			<!--<artifactId>jsch</artifactId>-->
+			<!--<version>0.1.50</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+			<!--<groupId>org.apache.ant</groupId>-->
+			<!--<artifactId>ant-jsch</artifactId>-->
+			<!--<version>1.8.1</version>-->
+			<!--</dependency>-->
+			<!--</dependencies>-->
+			<!--</plugin>-->
 		</plugins>
 	</build>
 	<properties>
