--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,9 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
+						<configuration>
+							<additionalparam>-Xdoclint:none</additionalparam>
+						</configuration>
 					</execution>
 					<execution>
 						<id>aggregate</id>
