--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -75,6 +75,7 @@
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.4.1</version>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -91,6 +92,7 @@
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
 			<version>1.6.8</version>
+			<optional>true</optional>
 		</dependency>
 		<!-- Testing -->
 		<dependency>
