--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -21,7 +21,7 @@
 	<parent>
 		<groupId>com.foreach.libs</groupId>
 		<artifactId>common-projects</artifactId>
-		<version>1.0</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 	<dependencies>
 		<dependency>
