--- a/common-mybatis/pom.xml
+++ b/common-mybatis/pom.xml
@@ -17,12 +17,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>common-mybatis</artifactId>
-	<version>1.3-SNAPSHOT</version>
+	<version>2.0-SNAPSHOT</version>
+
 	<parent>
 		<groupId>com.foreach.libs</groupId>
 		<artifactId>common-projects</artifactId>
-		<version>1.3-SNAPSHOT</version>
+		<version>2.0-SNAPSHOT</version>
 	</parent>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.foreach.libs</groupId>
@@ -32,17 +34,16 @@
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
-			<version>[3.1.1,)</version>
+			<version>3.5.16</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
-			<version>[1.1.0,)</version>
+			<version>3.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>[3.1,)</version>
 		</dependency>
 		<!-- Testing -->
 		<dependency>
@@ -63,4 +64,5 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
 </project>
