--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -18,11 +18,12 @@
 	<parent>
 		<artifactId>common-projects</artifactId>
 		<groupId>com.foreach.libs</groupId>
-		<version>1.3-SNAPSHOT</version>
+		<version>2.0-SNAPSHOT</version>
 	</parent>
-	<modelVersion>4.0.0</modelVersion>
 
+	<modelVersion>4.0.0</modelVersion>
 	<artifactId>common-test</artifactId>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -40,13 +41,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.9.5</version>
-		</dependency>
-		<dependency>
-			<groupId>cglib</groupId>
-			<artifactId>cglib</artifactId>
-			<scope>test</scope>
+			<artifactId>mockito-core</artifactId>
 		</dependency>
 	</dependencies>
+
 </project>
